--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
               <p class="social__text">Follow us</p>
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="" class="social__link" aria-label="инстаграм">
+                  <a href="https://www.instagram.com/" class="social__link" aria-label="инстаграм" target="_blank">
                     <svg class="social__icon" width="24" height="24">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="" class="social__link" aria-label="твиттер">
+                  <a href="https://twitter.com/" class="social__link" aria-label="твиттер" target="_blank">
                     <svg class="social__icon" width="24" height="24">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
@@ -163,6 +163,7 @@
                 </picture>
                 
               </li>
+
               <li class="articles__item" >
                 <div class="articles__post">
                   <p class="articles__number" id="03">03</p>
