сделал плавные переходы по скролл меню

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <p class="hero__text">
                 Be prepared for the Mountains and beyond!
               </p>
-              <a class="hero__skipp" href="#articles">
+              <a class="hero__skipp" href="javascript://0" onclick="slowScroll('#articles')">
                 scroll down
                 <svg
                   class="hero__icon"
@@ -259,22 +259,24 @@
         <div class="slider__wrapper">
           <ul class="slider__list">
             <li class="slider__item">
-              <a class="slider__link" href="#start">Start</a>
+              <a class="slider__link" href="javascript://0" onclick="slowScroll('#start')">Start</a>
             </li>
             <li class="slider__item">
-              <a class="slider__link" href="#01">01</a>
+              <a class="slider__link" href="javascript://0" onclick="slowScroll('#01')">01</a>
             </li>
             <li class="slider__item">
-              <a class="slider__link" href="#02">02</a>
+              <a class="slider__link" href="javascript://0" onclick="slowScroll('#02')">02</a>
             </li>
             <li class="slider__item">
-              <a class="slider__link" href="#03">03</a>
+              <a class="slider__link" href="javascript://0" onclick="slowScroll('#03')">03</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
     <!--  -->
+    <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/scroll.js"></script>
   </body>
 </html>
