пофиксил слайдер(теперь sticky)

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </header>
 
-      <main>
+      <main class="main">
         <article class="articles" id="articles">
           
             <ul class="articles__list">
