--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
             ><img src="./images/logo.png" alt="логотип"
           /></a>
             <p class="footer__do-it">
-              Get out there & discover your next slope, mountain & destination!
+              Get out there & discover your next <br/> slope, mountain & destination!
             </p>
             <span class="footer__copyright"
               >Copyright 2019 MNTN, Inc. Terms & Privacy</span
             >
           </div>
           <div class="more">
-            <div class="more__block">
+            <div class="more__block ">
               <h2 class="more__title">More on The Blog</h2>
               <ul class="more__list">
                 <li class="more__item">
