--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
               <p class="social__text">Follow us</p>
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="https://www.instagram.com/" class="social__link" aria-label="инстаграм" target="_blank">
+                  <a href="https://www.instagram.com/" class="social__link" aria-label="инстаграм" target="_blank" rel="noopener">
                     <svg class="social__icon" width="24" height="24">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="https://twitter.com/" class="social__link" aria-label="твиттер" target="_blank">
+                  <a href="https://twitter.com/" class="social__link" aria-label="твиттер" target="_blank" rel="noopener">
                     <svg class="social__icon" width="24" height="24">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
