aria-label для выпадающего меню

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <header class="header" id="start">
         <div class="header-container">
           <a href="" class="logo"
-            ><img src="./images/logo.png" alt="логотип"
+            ><img src="./images/logo.png" alt="логотип" width="108"
           /></a>
-          <a href="" class="menu" ></a>
+          <a href="javascript//:0" class="menu" aria-label="выпадающее меню"></a>
             <span class="menu__button" data-menu-button></span>
           </button>
           <div class="drop-menu" data-menu>
