Перевёл сайт на русский

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           <div class="drop-menu" data-menu>
             <ul class="navigation-menu">
               <li class="navigation-menu__item">
-                <a href="" class="navigation-menu__link">Equipment</a>
+                <a href="" class="navigation-menu__link">Снаряжение</a>
               </li>
               <li class="navigation-menu__item">
-                <a href="" class="navigation-menu__link">About us</a>
+                <a href="" class="navigation-menu__link">О нас</a>
               </li>
               <li class="navigation-menu__item">
-                <a href="" class="navigation-menu__link">Blog</a>
+                <a href="" class="navigation-menu__link">Блог</a>
               </li>
             </ul>
             <div class="logining">
@@ -37,10 +37,10 @@
               >
                 <use href="./images/sprite.svg#icon-account"></use>
               </svg>
-              <button class="logining__btn">Account</button>
+              <button class="logining__btn">Аккаунт</button>
             </div>
              <div class="social">
-              <p class="social__text">Follow us</p>
+              <p class="social__text">Подпишись</p>
               <ul class="social__list">
                 <li class="social__item">
                   <a href="https://www.instagram.com/" class="social__link" aria-label="инстаграм" target="_blank" rel="noopener">
@@ -64,12 +64,12 @@
           <div class="hero__container">
            
             <div class="hero__content">
-              <h1 class="hero__title">A Hiking guide</h1>
+              <h1 class="hero__title">Путеводитель</h1>
               <p class="hero__text">
-                Be prepared for the Mountains and beyond!
+                Будьте Готовы к Горам и Не Только!
               </p>
               <a class="hero__skipp" href="javascript://0" onclick="slowScroll('#articles')">
-                scroll down
+                прокрутить вниз
                 <svg
                   class="hero__icon"
                   width="16"
@@ -91,18 +91,18 @@
               <li class="articles__item" >
                 <div class="articles__post">
                   <p class="articles__number" id="01">01</p>
-                  <p class="articles__topic">GEt Started</p>
-                  <h2 class="articles__title">What level of hiker are you?</h2>
+                  <p class="articles__topic">начать</p>
+                  <h2 class="articles__title">Какой ты уровень туриста?</h2>
                   <p class="articles__text">
-                    Determining what level of hiker you are can be an important
-                    tool when planning future hikes. This hiking level guide
-                    will help you plan hikes according to different hike ratings
-                    set by various websites like All Trails and Modern Hiker.
-                    What type of hiker are you – novice, moderate, advanced
-                    moderate, expert, or expert backpacker?
+                    Определение вашего уровня туриста может быть важным
+                    инструментом при планировании будущих походов. Это руководство по пешим прогулкам
+                    поможет вам спланировать походы согласно разным рейтингам походов, которые
+                    устанавливается различными веб-сайтами, такими как All Trails и Modern Hiker.
+                    Какой вы турист - новичок, средний, продвинутый?
+                    умеренный, эксперт или опытный турист?
                   </p>
                   <a href="" class="articles__read-more"
-                    >read more
+                    >Читать больше
                     <svg
                       class="articles__icon"
                       aria-label="стрелочка вправо"
@@ -128,20 +128,19 @@
               <li class="articles__item" >
                 <div class="articles__post" >
                   <p class="articles__number" id="02">02</p>
-                  <p class="articles__topic">Hiking Essentials</p>
+                  <p class="articles__topic">Основы пешего туризма</p>
                   <h2 class="articles__title">
-                    Picking the right Hiking Gear!
+                    Выбор подходящего походного снаряжения!
                   </h2>
                   <p class="articles__text">
-                    The nice thing about beginning hiking is that you don’t
-                    really need any special gear, you can probably get away with
-                    things you already have. Let’s start with clothing. A
-                    typical mistake hiking beginners make is wearing jeans and
-                    regular clothes, which will get heavy and chafe wif they get
-                    sweaty or wet.
+                    Самое приятное в начале похода в том, что вам действительно не нужно какое-либо специальное снаряжение, вы, вероятно, сможете взять
+                    вещи, которые у вас уже есть. Начнем с одежды. 
+                    Типичная ошибка новичков в походах - это носить джинсы и
+                    обычную одежду, которая станет тяжелой и будет натирать, если они 
+                    вспотеют или будут мокрыми.
                   </p>
                   <a href="" class="articles__read-more"
-                    >read more
+                    >Читать больше
                     <svg
                       class="articles__icon"
                       aria-label="стрелочка вправо"
@@ -167,18 +166,17 @@
               <li class="articles__item" >
                 <div class="articles__post">
                   <p class="articles__number" id="03">03</p>
-                  <p class="articles__topic">where you go is the key</p>
-                  <h2 class="articles__title">Understand Your Map & Timing</h2>
+                  <p class="articles__topic">Ключ твоего пути</p>
+                  <h2 class="articles__title">Смотри в карту маршрута</h2>
                   <p class="articles__text">
-                    To start, print out the hiking guide and map. If it’s
-                    raining, throw them in a Zip-Lock bag. Read over the guide,
-                    study the map, and have a good idea of what to expect. I
-                    like to know what my next landmark is as I hike. For
-                    example, I’ll read the guide and know that say, in a mile, I
-                    make a right turn at the junction..
+                    Для начала распечатайте путеводитель и карту. Если
+                    идет дождь - бросьте их в сумку с застежкой-молнией. Прочтите руководство,
+                    изучите карту и хорошо представляйте, чего ожидать.Я
+                    хотел бы знать, какой будет моя следующая достопримечательность, когда иду пешком. Я прочитаю руководство и буду знать, что, скажем, через милю
+                    на перекрестке поверну направо..
                   </p>
                   <a href="" class="articles__read-more"
-                    >read more
+                    >Читать больше
                     <svg
                       class="articles__icon"
                       aria-label="стрелочка вправо"
@@ -210,7 +208,7 @@
             ><img src="./images/logo.png" alt="логотип"
           /></a>
             <p class="footer__do-it">
-              Get out there & discover your next <br/> slope, mountain & destination!
+              Отправляйтесь туда и откройте для себя следующий склон и место назначения!
             </p>
             <span class="footer__copyright"
               >Copyright 2019 MNTN, Inc. Terms & Privacy</span
@@ -218,36 +216,36 @@
           </div>
           <div class="more">
             <div class="more__block ">
-              <h2 class="more__title">More on The Blog</h2>
+              <h2 class="more__title">Подробнее в блоге</h2>
               <ul class="more__list">
                 <li class="more__item">
-                  <a href="" class="more__link">About MNTN</a>
+                  <a href="" class="more__link">О MNTN</a>
                 </li>
                 <li class="more__item">
-                  <a href="" class="more__link">Contributors & Writers</a>
+                  <a href="" class="more__link">Авторы и писатели</a>
                 </li>
                 <li class="more__item">
-                  <a href="" class="more__link">Write For Us</a>
+                  <a href="" class="more__link">Напишите нам</a>
                 </li>
                 <li class="more__item">
-                  <a href="" class="more__link">Contact Us</a>
+                  <a href="" class="more__link">Связаться с нами</a>
                 </li>
                 <li class="more__item">
-                  <a href="" class="more__link">Privacy Policy</a>
+                  <a href="" class="more__link">Политика конфиденциальности</a>
                 </li>
               </ul>
             </div>
             <div class="more__block">
-              <h2 class="more__title">More on MNTN</h2>
+              <h2 class="more__title">Больше о MNTN</h2>
               <ul class="more__list">
                 <li class="more__item">
-                  <a href="" class="more__link">The Team</a>
+                  <a href="" class="more__link">Команда</a>
                 </li>
                 <li class="more__item">
-                  <a href="" class="more__link">Jobs</a>
+                  <a href="" class="more__link">Работы</a>
                 </li>
                 <li class="more__item">
-                  <a href="" class="more__link">Press</a>
+                  <a href="" class="more__link">Пресса</a>
                 </li>
               </ul>
             </div>
@@ -259,7 +257,7 @@
         <div class="slider__wrapper">
           <ul class="slider__list">
             <li class="slider__item">
-              <a class="slider__link" href="javascript://0" onclick="slowScroll('#start')">Start</a>
+              <a class="slider__link" href="javascript://0" onclick="slowScroll('#start')">Начало</a>
             </li>
             <li class="slider__item">
               <a class="slider__link" href="javascript://0" onclick="slowScroll('#01')">01</a>
