изменил название второго поста

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <p class="articles__number" id="02">02</p>
                   <p class="articles__topic">Основы пешего туризма</p>
                   <h2 class="articles__title">
-                    Выбор подходящего походного снаряжения!
+                    Выбор походного снаряжения!
                   </h2>
                   <p class="articles__text">
                     Самое приятное в начале похода в том, что вам действительно не нужно какое-либо специальное снаряжение, вы, вероятно, сможете взять
